# 3007H

./: CMakeLists.txt  README.md  project.cpp  project_new.cpp  sparse_lp_complete.cpp
include/lp_solver/: lp_solver.hpp
include/lp_solver/linalg/: eigen_factor.hpp  gilbert_peierls.hpp  i_basis_factor.hpp  umfpack_factor.hpp
include/lp_solver/model/: initialization.hpp  phase_one.hpp  solver_state.hpp
include/lp_solver/presolve/: presolver.hpp
include/lp_solver/simplex/: dse_row_pivot.hpp  dual_simplex.hpp  naive_row_pivot.hpp
src/linalg/: eigen_factor.cpp  gilbert_peierls.cpp  umfpack_factor.cpp
src/model/: initialization.cpp
src/presolve/: presolver.cpp
src/simplex/: dual_simplex.cpp
tests/: test_basis_factor_contract.cpp  test_big_m.cpp  test_dual_simplex.cpp  test_gilbert_peierls.cpp  test_presolve.cpp
tools/: netlib_runner.cpp
